# BMS-SDP

./: .gitignore  CMakeLists.txt  Makefile  README.md  aer_bms.ioc  build.bat  build.sh  sdp.kicad_sch  toolchain.cmake
Core/Inc/: Packet.h  UART.h  bq79656.h  gpio.h  main.h  packet.h  stm32f3xx_hal_conf.h  util.h
Core/Src/: BQ_Comm.c  BQ_Comm.h  Packet.c  Packet.cpp  Packet.h  UART.c  UART.cpp  UART.h  bq79656.c  can.c  gpio.c  main.c  packet.c  stm32f3xx_it.c  usart.c  util.c  util.cpp
cmake/stm32cubemx/: CMakeLists.txt
src/: BQ_Comm.cpp  Packet.c  Packet.cpp  Packet.h  UART.c  UART.cpp  UART.h  util.c  util.h
